# tifileutils

./: Makefile  Makefile.am  Makefile.mingw  Makefile.old  TODO  configure.ac  tigroup.c  tigrp.c  timod.c
src/: Makefile.am  common.c  tigrp.c  timod.c  tiutils.h
